--- a/index.html
+++ b/index.html
@@ -120,16 +120,6 @@
 
       <div class="card">
         <div class="card-title">
-          <a href="./plugins/cs01/">RhS01 (Macro OSC)</a>
-        </div>
-        <div class="card-desc">
-          Mono synthesizer with Macro Oscillator engine. Mobile-first · AudioWorklet.
-        </div>
-        <div class="badge">Mono · DSP</div>
-      </div>
-
-      <div class="card">
-        <div class="card-title">
           <a href="./plugins/Samptu303/">SamPtu303 Lite</a>
         </div>
         <div class="card-desc">
@@ -150,7 +140,7 @@
 
 <div class="card">
         <div class="card-title">
-          <a href="./plugins/Brodha/">Vibes chords synth</a>
+          <a href="./plugins/Brodha/">BRhodA Vibes chords synth</a>
         </div>
         <div class="card-desc">
           Synthesizer with a chords sequencer. Polyphonic.
@@ -162,6 +152,7 @@
   </div>
 </body>
 </html>
+
 
 
 
