--- a/plugins/balafon/index.html
+++ b/plugins/balafon/index.html
@@ -706,8 +706,8 @@
     <!-- MOOG FILTER -->
     <div class="panel">
       <div class="panel-title">Moog Filter</div>
-      <button class="bypass-btn active" id="filter-bypass" onclick="toggleBypass('filter')">
-        <span class="led"></span><span class="bypass-label">ON</span>
+      <button class="bypass-btn" id="filter-bypass" onclick="toggleBypass('filter')">
+        <span class="led"></span><span class="bypass-label">OFF</span>
       </button>
       <div class="knobs-grid">
         <div class="knob-wrap">
@@ -758,8 +758,8 @@
     <!-- SPACE ECHO -->
     <div class="panel">
       <div class="panel-title">Space Echo</div>
-      <button class="bypass-btn active" id="echo-bypass" onclick="toggleBypass('echo')">
-        <span class="led"></span><span class="bypass-label">ON</span>
+      <button class="bypass-btn" id="echo-bypass" onclick="toggleBypass('echo')">
+        <span class="led"></span><span class="bypass-label">OFF</span>
       </button>
       <div class="knobs-grid">
         <div class="knob-wrap">
@@ -810,8 +810,8 @@
     <!-- TAPE -->
     <div class="panel">
       <div class="panel-title">Tape Saturation</div>
-      <button class="bypass-btn active" id="tape-bypass" onclick="toggleBypass('tape')">
-        <span class="led"></span><span class="bypass-label">ON</span>
+      <button class="bypass-btn" id="tape-bypass" onclick="toggleBypass('tape')">
+        <span class="led"></span><span class="bypass-label">OFF</span>
       </button>
       <div class="knobs-grid">
         <div class="knob-wrap">
@@ -897,11 +897,11 @@ function noteToFreq(note, oct) {
 const P = {
   volume:0.8, decay:0.65, hardness:0.5, resonance:0.4, pitch:0,
   filterCutoff:0.6, filterRes:0.3, filterDrive:0.2, filterEnv:0.4,
-  filterActive:true, filterMode:'lowpass',
+  filterActive:false, filterMode:'lowpass',
   echoTime:0.35, echoFeedback:0.45, echoMix:0.4, echoMod:0.25,
-  echoActive:true, echoSync:'quarter',
+  echoActive:false, echoSync:'quarter',
   tapeSat:0.3, tapeBias:0.5, tapeHiss:0.2, tapeFlutter:0.15,
-  tapeActive:true, tapeSpeed:'7ips',
+  tapeActive:false, tapeSpeed:'7ips',
 };
 
 let actx=null, masterOut=null, analyser=null, instrumentBus=null;
